--- a/package.json
+++ b/package.json
@@ -6,13 +6,18 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "google-map-react": "^2.1.10",
     "react": "^17.0.2",
     "react-animated-slider": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-floater": "^0.7.3",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
+    "react-snap-scroll": "0.0.5",
+    "scroll-snap": "^3.2.4",
+    "scroll-snap-react": "^1.0.1",
     "smooth-scroll": "^16.1.3",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
